# project-3

./: Automaton.h  BlockCommentAutomaton.cpp  BlockCommentAutomaton.h  CMakeLists.txt  ColonAutomaton.h  ColonDashAutomaton.h  DatalogProgram.cpp  DatalogProgram.h  IDAutomaton.cpp  IDAutomaton.h  Lexer.cpp  Lexer.h  LineCommentAutomaton.cpp  LineCommentAutomaton.h  MatcherAutomaton.cpp  MatcherAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Rule.cpp  Rule.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  lab2  main.cpp
